<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Qixueguan_app</string>
    <string name="login">登陆</string>
	<string name="regist">注册</string>
	<string name="fan">返回</string>
	<string name="left">＜</string>
	<string name="right">＞</string>
	<string name="friend">添加好友</string>
<<<<<<< HEAD
	<string name="age">年龄</string>
	<string name="sex">性别</string>
	<string name="birthday">生日</string>
	<string name="bianji">编辑</string>
	<string name="update_email">修改email</string>
	<string name="update_pwd">修改密码</string>
	<string name="exit">退出登陆</string>
=======
>>>>>>> be3859dc3d50513da46878871b14cf993d648647
</resources>