<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/restitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/lantan" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignLeft="@id/restitle"
            android:gravity="center_vertical" >

            <Button
                android:id="@+id/btnreturn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:onClick="onclick"
                android:text="@string/fan" />
        </LinearLayout>

        <TextView
            android:id="@+id/textregist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/regist"
            android:textColor="@color/white"
            android:textSize="16dp" />

        <Button
            android:id="@+id/friend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/friend" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/portrait" />

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/age"
            android:layout_marginLeft="20dp"
            android:text="@string/sex" />

        <TextView
            android:id="@+id/user_sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/user_age"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/sex" />

        <TextView
            android:id="@+id/birthday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sex"
            android:layout_marginLeft="20dp"
            android:text="@string/birthday" />

        <TextView
            android:id="@+id/user_birthday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/user_sex"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/birthday" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/user_birthday"
            android:layout_marginRight="30dp"
            android:onClick="updates"
            android:text="@string/bianji" />
    </RelativeLayout>

    <Button
        android:id="@+id/update_email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onclick"
        android:text="@string/update_email" />

    <Button
        android:id="@+id/update_pwd"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onclick"
        android:text="@string/update_pwd" />

    <Button
        android:id="@+id/exit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onclick"
        android:text="@string/exit" />

</LinearLayout>