<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal" >

        <com.qixueguan.dodowaterfall.LockableHorizontalScrollView
            android:id="@+id/ScrollView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:scrollbars="none" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal" >

                <LinearLayout
                    android:id="@+id/n_left"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:clickable="true"
                    android:orientation="vertical" >

                    <RelativeLayout
                        android:id="@+id/n_Rl"
                        android:layout_width="fill_parent"
                        android:layout_height="70dp"
                        android:background="@color/lantan" >

                        <Button
                            android:id="@+id/closes"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="10dp"
                            android:text="@string/fan" />

                        <TextView
                            android:id="@+id/name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:text="课程名"
                            android:textColor="@color/white"
                            android:textSize="18sp" />

                        <Button
                            android:id="@+id/wide_btn"
                            android:layout_width="50dp"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_marginRight="10dp"
                            android:textSize="18sp" />
                    </RelativeLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:gravity="center">

                        <TextView
                            android:id="@+id/left"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="30dp"
                            android:text="@string/left" />

                        <android.support.v4.view.ViewPager
                            android:id="@+id/pager"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent" >
                        </android.support.v4.view.ViewPager>
                        <TextView
                            android:id="@+id/right"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="30dp"
                            android:text="@string/right" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/cate_menu"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:background="@color/hui"
                    android:gravity="center_vertical"
                    android:orientation="vertical" >
                </LinearLayout>
            </LinearLayout>
        </com.qixueguan.dodowaterfall.LockableHorizontalScrollView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/close_menu_linear"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="0dip"
        android:layout_marginTop="0dip"
        android:orientation="horizontal"
        android:visibility="gone" >

        <View
            android:id="@+id/close_menu"
            android:layout_width="65dip"
            android:layout_height="fill_parent" >
        </View>

        <View
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:clickable="false" >
        </View>
    </LinearLayout>

</RelativeLayout>